# gnome-sound-recorder

./: NEWS  README.md  autogen.sh  configure.ac  gnome-sound-recorder.doap  meson.build  org.gnome.SoundRecorder.json
build-aux/: meson_post_install.py
data/: Makefile  Makefile.in  gschemas.compiled  meson.build  org.gnome.SoundRecorder.data.gresource.xml  org.gnome.SoundRecorder.desktop  org.gnome.SoundRecorder.gschema.xml
data/appdata/: meson.build  org.gnome.SoundRecorder.appdata.xml.in.in  org.gnome.SoundRecorder.metainfo.xml.in.in
data/ui/: main_window.ui  player.ui  recording_row.ui  window.ui
help/: meson.build
help/C/: index.page
po/: POTFILES.in  oc.po  pt.po  ru.po  zh_CN.po
src/: application.js  audioProfile.js  errorDialog.js  fileUtil.js  listview.js  mainWindow.js  meson.build  org.gnome.SoundRecorder.src.gresource.xml  play.js  player.js  preferences.js  record.js  recording.js  util.js  waveform.js
